<resources xmlns:tools="http://schemas.android.com/tools">


    <string name="leaderboard_id">CgkI1uK-rpsNEAIQAQ</string>

    <string name="udemy_course">https://www.udemy.com/course/learn-akan-twi/?referralCode=6D321CE6AEE1834CCB0F</string>
    <string name="AdUnitIDInterstitial">ca-app-pub-7384642419407303/9880404420</string>
    <string name="AdUnitTestIDInterstitial">ca-app-pub-3940256099942544/1033173712</string>

    <string name="AdUnitBanner">ca-app-pub-7384642419407303/7840050122</string>
    <string name="AdUnitTestBanner">ca-app-pub-3940256099942544/6300978111</string>


    <string name="app_name">Twi guide</string>
    <string name="alphabets">Alphabets</string>
    <string name="numbers">Numbers</string>
    <string name="days_of_week">Days of Week</string>
    <string name="time">time</string>
    <string name="family">Family</string>
    <string name="weather">Weather</string>
    <string name="months">Months</string>
    <string name="pronouns">Pronouns</string>
    <string name="title_activity_common_expressionsa">CommonExpressionsaActivity</string>
    <string name="main_menu">Main Menu</string>
    <string name="download_audio">Download Audio</string>
    <string name="downloadAllAudio">Download All Audio</string>
    <string name="search">Search</string>
    <string name="ghanaflag">ghanaflag</string>
    <string name="learn_akan_twi">Learn Akan Twi</string>
    <string name="communicate">Communicate</string>
    <string name="Quiz">Quiz</string>
    <string name="QuestionText">QuestionText</string>
    <string name="buy_video_course">Video Course</string>
    <string name="nicetry">Nice Try</string>
    <string name="fail">Fail. You can do better</string>
    <string name="keeptrying">Keep trying. You can do better</string>
    <string name="welldone">Well Done!!</string>
    <string name="excellent">Excellent!!!!!</string>
    <string name="resulttext">YOU HAD</string>
    <string name="connected">Connected</string>
    <string name="speakAlphabetName">speakAlphabetName</string>
    <string name="scoretext">Score</string>
    <string name="button">Button</string>
    <string name="scoreboard">0/0</string>
    <string name="playagain">PLAY AGAIN</string>

    <string name="rate">Rate 5 stars</string>


    <string name="rate_dialog_title">Please Rate This App</string>
    <string name="rate_dialog_message">If you enjoy this app, please give us a 5 star rating to support us. You can also leave a nice review to encourage us</string>
    <string name="rate_dialog_ok">Give us 5 stars</string>
    <string name="rate_dialog_cancel">Remind me later</string>
    <string name="rate_dialog_no">No, Thanks</string>
    <string name="correctanswers">CORRECT ANSWERS</string>
    <string name="search_all">Search All</string>
    <string name="share">Share App</string>
    <string name="mute">Mute</string>
    <string name="your_twi_for_the_day">Your Twi For The Day</string>
    <string name="turn_on_daily_twi">Turn On Daily Twi</string>
    <string name="start_quiz">START QUIZ</string>
    <string name="number_zero">0</string>
    <string name="correct_answers">Correct Answers</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="turn_off_daily_twi">Turn Off Daily Twi</string>


    <string name="number_one">1</string>
    <string name="number_two">2</string>
    <string name="number_three">3</string>
    <string name="number_four">4</string>
    <string name="number_five">5</string>
    <string name="number_six">6</string>
    <string name="number_seven">7</string>
    <string name="number_eight">8</string>
    <string name="number_nine">9</string>
    <string name="number_ten">10</string>
    <string name="number_eleven">11</string>
    <string name="number_twelve">12</string>
    <string name="number_thirteen">13</string>
    <string name="number_fourteen">14</string>
    <string name="number_fifteen">15</string>
    <string name="number_sixteen">16</string>
    <string name="number_seventeen">17</string>
    <string name="number_eighteen">18</string>
    <string name="number_nineteen">19</string>
    <string name="number_twenty">20</string>


    <!--Alphabets -->
    <string name="alphabet_upper_a">A</string>
    <string name="alphabet_upper_b">B</string>
    <string name="alphabet_upper_d">D</string>
    <string name="alphabet_upper_e">E</string>
    <string name="alphabet_upper_q">Ɛ</string>
    <string name="alphabet_upper_f">F</string>
    <string name="alphabet_upper_g">G</string>
    <string name="alphabet_upper_h">H</string>
    <string name="alphabet_upper_i">I</string>
    <string name="alphabet_upper_k">K</string>
    <string name="alphabet_upper_l">L</string>
    <string name="alphabet_upper_m">M</string>
    <string name="alphabet_upper_n">N</string>
    <string name="alphabet_upper_o">O</string>
    <string name="alphabet_upper_x">Ɔ</string>
    <string name="alphabet_upper_p">P</string>
    <string name="alphabet_upper_r">R</string>
    <string name="alphabet_upper_s">S</string>
    <string name="alphabet_upper_t">T</string>
    <string name="alphabet_upper_u">U</string>
    <string name="alphabet_upper_w">W</string>
    <string name="alphabet_upper_y">Y</string>


    <string name="TwiCourseUdemy">"https://www.udemy.com/course/learn-akan-twi/?couponCode=FDISCOUNT1"</string>


    <!-- Drawer Layout -->

    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_logout">Sign out</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="resetPasswordInstructions">Enter your email and click on RESET PASSWORD to receive password reset instructions in your email</string>


    <!-- Subscription -->

    <string name="MonthlySubBenefits"> Benefits: \n 1. Ad free \n 2. Regular Updates \n 3. More Vocabulary \n 4. More Features \n 5. Billed Monthly</string>
    <string name="HalfYearSubBenefits"> Purchase and keep for a Lifetime or Subscribe: \n 1. Ad free \n 2. Regular Updates  \n 3. More Vocabulary and Proverbs \n 4. Audio Slideshow For All Vocabulary Categories \n 5. More Fun Features to let you enjoy learning Twi </string>
    <string name="AnnualSubBenefits" tools:ignore="DuplicateDefinition"> Benefits: \n 1. Ad free \n 2. Regular Updates \n 3. More Vocabulary \n 4. More Features \n 5. Billed Annually </string>
    <string name="title_activity_settings">LearnAkanTwi</string>
    <string name="purchase_or_subscribe_banner">PURCHASE OR SUBSCRIBE FOR MORE CONTENT</string>

    <!-- Preference Titles -->
    <string name="messages_header">Hello</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>


    <!-- Settings -->

    <string name="deleteActivityText">Free up space by deleting some audio files.\n When you delete audio for a particular category you will not be able play the sound while offline. \n You will need to be connected to the internet to download again</string>
    <string name="downloadActivityText">Select any category below to download the audio files for offline playback</string>
    <string name="title_activity_home_main">HomeMainActivity</string>
    <string name="msg_token_fmt">token</string>

</resources>
