<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/menusearch"
        android:title="@string/search"
        android:icon="@android:drawable/ic_menu_search"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="always"
        >

    </item>


    <item
        android:title="@string/Quiz"
        android:id="@+id/quiz1">
    </item>

    <item
        android:title="@string/search_all"
        android:id="@+id/searchAll">
    </item>


    <item
        android:title="@string/buy_video_course"
        android:id="@+id/videoCourse">
    </item>

    <item
        android:id="@+id/rate"
        android:title="@string/rate">
    </item>

    <item
        android:id="@+id/share"
        android:title="@string/share">
    </item>

</menu>